--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -7,6 +7,11 @@ body{
 #nav{
     background-color: aquamarine;
     height: 52px;
+    
+}
+
+#app{
+    margin: 30px;
 }
 
 button {
@@ -18,16 +23,18 @@ button {
     padding-left: 15px;
     padding-right: 15px;
     transition-duration: 0.4s;
-    color:rgb(44, 82, 68)
+    color:rgb(44, 82, 68);
 }
 
 button:hover{
-    background-color: rgb(99, 194, 162);
+    background-color: rgba(99, 194, 162, 0.822);
+    border-radius: 10px;
     
 }
 
 .clicked{
     background-color: rgb(115, 224, 188);
+    border-radius: 10px;
 }
 
 a{
