--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -7,6 +7,8 @@ body{
 #nav{
     background-color: aquamarine;
     height: 52px;
+    border-bottom:rgb(145, 212, 205) solid 2px;
+    min-width: 600px;
     
 }
 
@@ -19,8 +21,8 @@ button {
     background-color: aquamarine;
     border: none;
     line-height: 50px;
-    font-family:fantasy;
-    font-size: large;
+    font-family:Boogaloo;
+    font-size: larger;
     padding-left: 15px;
     padding-right: 15px;
     transition-duration: 0.4s;
@@ -39,13 +41,15 @@ button:hover{
 }
 
 a{
-    color:blueviolet;
-    font-family:sans-serif;
+    color:rgb(13, 100, 100);
+    font-family: Architects Daughter;
+    text-decoration: none;
+    font-size:large;
     
 }
 
 a:hover{
-    color: rgb(99, 30, 163);
+    color: rgb(80, 182, 182);
 }
 
 #welcome{
@@ -55,4 +59,59 @@ a:hover{
     margin-left: 30px;
     margin-right:30px;
     font-style:oblique;
+}
+
+#gitLogo{
+    width: 50px;
+    float: right;
+    margin-right: 20px;
+ 
+}
+
+#me{
+    width: 200px;
+}
+
+#exer{
+    line-height: 40px;
+    padding-left: 40px;
+}
+
+#team{
+    line-height: 40px;
+    padding-left: 40px;
+}
+
+h2{
+    color:rgb(29, 54, 45);
+}
+
+#aboutWrapper{
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 1fr;
+    grid-template-rows: 1fr 3fr 3fr 3fr;
+    grid-template-areas: "header header header picture"
+                         "intro intro div picture"
+                         "intro intro game game"
+                         "intro intro game game";
+}
+
+.header{
+    grid-area: header;
+    /* background-color: darkgrey; */
+}
+
+.picture{
+    grid-area: picture;
+}
+
+.intro{
+    grid-area: intro;
+    background-color: darkseagreen;
+}
+
+.game{
+    grid-area: game;
+    background-color: darkslateblue;
+    padding: 10px;
 }
