--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -8,12 +8,15 @@ body{
     background-color: aquamarine;
     height: 52px;
     border-bottom:rgb(145, 212, 205) solid 2px;
-    min-width: 600px;
+    min-width: 700px;
     
 }
 
 #app{
     margin: 30px;
+    font-family: Dekko;
+    text-align: center;
+    min-width: 1200px;
     
 }
 
@@ -65,16 +68,16 @@ a:hover{
     width: 50px;
     float: right;
     margin-right: 20px;
- 
-}
-
-#me{
-    width: 200px;
 }
 
 #exer{
     line-height: 40px;
     padding-left: 40px;
+}
+
+#me{
+    width: 200px;
+    border: 5px green inset;
 }
 
 #team{
@@ -88,12 +91,15 @@ h2{
 
 #aboutWrapper{
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 1fr;
-    grid-template-rows: 1fr 3fr 3fr 3fr;
-    grid-template-areas: "header header header picture"
-                         "intro intro div picture"
+    width: 100vw;
+    height: 100vh;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100px 200px 2fr 2fr;
+    grid-template-areas: "header header picture picture"
+                         "intro intro . ."
                          "intro intro game game"
                          "intro intro game game";
+    
 }
 
 .header{
@@ -103,15 +109,28 @@ h2{
 
 .picture{
     grid-area: picture;
+    justify-self: center;
 }
 
 .intro{
     grid-area: intro;
     background-color: darkseagreen;
+    border: 5px green inset;
+    padding: 10px 20px 0px 20px;
+    max-width: 700px;
+    min-width: 300px;
+    max-height:600px;
+    font-family: Coming Soon;
+    justify-self: center;
 }
 
 .game{
     grid-area: game;
-    background-color: darkslateblue;
-    padding: 10px;
+    background-color: rgb(61, 139, 135);
+    border: 5px green inset;
+    padding: 0px 30px 0px 30px;
+    max-width: 500px;
+    min-width: 300px;
+    font-family: Coming Soon;
+    justify-self: center;
 }
