--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -55,13 +55,20 @@ a:hover{
     color: rgb(80, 182, 182);
 }
 
-#welcome{
+#name{
     color: cornsilk;
     font-size: x-large;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-left: 30px;
     margin-right:30px;
     font-style:oblique;
+}
+
+#welcome{
+    color: rgb(102, 146, 121);
+    font-size: 100px;
+    line-height: 80vh;
+    font-family: Indie Flower;
 }
 
 #gitLogo{
@@ -72,17 +79,15 @@ a:hover{
 
 #exer{
     line-height: 40px;
-    padding-left: 40px;
 }
 
 #me{
     width: 200px;
-    border: 5px green inset;
+    border: 5px rgb(0, 128, 117) inset;
 }
 
 #team{
     line-height: 40px;
-    padding-left: 40px;
 }
 
 h2{
@@ -93,12 +98,12 @@ h2{
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px 200px 2fr 2fr;
-    grid-template-areas: "header header picture picture"
-                         "intro intro . ."
-                         "intro intro game game"
-                         "intro intro game game";
+    grid-template-columns: 1fr 1fr 10px 1fr 1fr;
+    grid-template-rows: 100px 200px 2fr;
+    grid-template-areas: "header header . picture picture"
+                         "intro intro . . ."
+                         "intro intro .. game game"
+                         ;
     
 }
 
@@ -114,8 +119,8 @@ h2{
 
 .intro{
     grid-area: intro;
-    background-color: darkseagreen;
-    border: 5px green inset;
+    background-color: rgb(175, 228, 193);
+    border: 5px rgb(0, 128, 117) inset;
     padding: 10px 20px 0px 20px;
     max-width: 700px;
     min-width: 300px;
@@ -127,7 +132,7 @@ h2{
 .game{
     grid-area: game;
     background-color: rgb(61, 139, 135);
-    border: 5px green inset;
+    border: 5px rgb(0, 128, 117) inset;
     padding: 0px 30px 0px 30px;
     max-width: 500px;
     min-width: 300px;
