--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -20,7 +20,7 @@ body{
     background-color: aquamarine;
     height: 52px;
     border-bottom:rgb(145, 212, 205) solid 2px;
-    min-width: 700px;
+    min-width: 1800px;
     width: 100vw;
 
 }
@@ -29,7 +29,7 @@ body{
     margin: 30px;
     font-family: Dekko;
     text-align: center;
-    min-width: 1200px;
+    min-width: 1700px;
 
 }
 
@@ -97,7 +97,7 @@ a:hover{
 
 #me{
     width: 200px;
-    border: 5px rgb(0, 128, 117) inset;
+    border: 5px rgb(0, 128, 117) groove;
 }
 
 #team{
@@ -112,11 +112,11 @@ h2{
     display: grid;
     
     /* height: 100vh; */
-    grid-template-columns: 20% 20% 10px 15% 20%;
-    grid-template-rows: 100px 200px 50vh;
-    grid-template-areas: "header header . picture picture"
-                         "intro intro . . ."
-                         "intro intro .. game game"
+    grid-template-columns: 35% 10% 10px 5% 5% 5%;
+    grid-template-rows: 100px 200px auto;
+    grid-template-areas: ". header header . picture picture ."
+                         ". intro intro . . . ."
+                         ". intro intro . game game ."
                          ;
 
 }
@@ -134,7 +134,7 @@ h2{
 .intro{
     grid-area: intro;
     background-color: rgb(175, 228, 193);
-    border: 5px rgb(0, 128, 117) inset;
+    border: 5px rgb(0, 128, 117) groove;
     padding: 10px 20px 0px 20px;
     max-width: 700px;
     min-width: 300px;
@@ -146,10 +146,11 @@ h2{
 .game{
     grid-area: game;
     background-color: rgb(61, 139, 135);
-    border: 5px rgb(0, 128, 117) inset;
+    border: 5px rgb(0, 128, 117) groove;
     padding: 0px 30px 0px 30px;
     max-width: 500px;
     min-width: 300px;
     font-family: Coming Soon;
     justify-self: center;
+    height: 500px;
 }
