--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -14,6 +14,7 @@ body::-webkit-scrollbar-thumb {
 body{
     margin: 0;
     background-color: rgb(224, 247, 242);
+    /* background-color: rgb(78, 116, 108); */
 }
 
 #nav{
@@ -100,6 +101,10 @@ a:hover{
     border: 5px rgb(0, 128, 117) groove;
 }
 
+.blurb{
+    text-align: start;
+}
+
 #team{
     line-height: 40px;
 }
@@ -138,7 +143,7 @@ h2{
     padding: 10px 20px 0px 20px;
     max-width: 700px;
     min-width: 300px;
-    max-height:600px;
+    max-height:500px;
     font-family: Coming Soon;
     justify-self: center;
 }
@@ -147,10 +152,10 @@ h2{
     grid-area: game;
     background-color: rgb(61, 139, 135);
     border: 5px rgb(0, 128, 117) groove;
-    padding: 0px 30px 0px 30px;
+    padding: 10px 30px 0px 30px;
     max-width: 500px;
     min-width: 300px;
     font-family: Coming Soon;
     justify-self: center;
-    height: 500px;
+    height: 400px;
 }
