--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -14,24 +14,21 @@ body::-webkit-scrollbar-thumb {
 body{
     margin: 0;
     background-color: rgb(224, 247, 242);
-    /* background-color: rgb(78, 116, 108); */
 }
 
 #nav{
     background-color: aquamarine;
     height: 52px;
     border-bottom:rgb(145, 212, 205) solid 2px;
-    min-width: 1800px;
+    min-width: 1000px;
     width: 100vw;
-
 }
 
 #app{
     margin: 30px;
     font-family: Dekko;
     text-align: center;
-    min-width: 1700px;
-
+    min-width: 1000px;
 }
 
 button {
@@ -83,6 +80,7 @@ a:hover{
     font-size: 100px;
     line-height: 80vh;
     font-family: Indie Flower;
+    margin:auto;
 }
 
 #gitLogo{
@@ -128,7 +126,6 @@ h2{
 
 .header{
     grid-area: header;
-    /* background-color: darkgrey; */
 }
 
 .picture{
@@ -158,4 +155,82 @@ h2{
     font-family: Coming Soon;
     justify-self: center;
     height: 400px;
+}
+
+@media screen and (max-width:500px){
+    body::-webkit-scrollbar {
+        width: 0.7rem;
+        height: 0.7rem;
+    }
+    
+    body ::-webkit-scrollbar-track {
+        background: rgb(46, 87, 90);
+    }
+    
+    body::-webkit-scrollbar-thumb {
+        background: rgb(21, 187, 146);
+    }
+    
+    body{
+        margin: 0;
+        background-color: rgb(224, 247, 242);
+        /* background-color: blueviolet; */
+    }
+    .header{
+        grid-area: header;
+    }
+
+    #gitLogo{
+        width: 50px;
+        float: right;
+        margin-right: 20px;
+        padding-top:2px;
+    }
+    #name{
+        color: cornsilk;
+        font-size: x-large;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin-left:21%;
+        font-style:oblique;
+        position: fixed;
+    }
+    
+    #welcome{
+        color: rgb(102, 146, 121);
+        font-size: 100px;
+        line-height: 80vh;
+        font-family: Indie Flower;
+        margin:auto;
+    }
+    #nav{
+        background-color: aquamarine;
+        height: 100px;
+        border-bottom:rgb(145, 212, 205) solid 2px;
+        min-width: 500px;
+        width: 100vw;
+        padding-left: 20%;
+        padding-top:10px;
+        transition-duration: 0.4s;
+    }
+    
+    #app{
+        margin: 30px;
+        font-family: Dekko;
+        text-align: center;
+        min-width: 400px;
+
+    }
+    
+    button {
+        background-color: aquamarine;
+        border: none;
+        line-height: 50px;
+        font-family:Boogaloo;
+        font-size: larger;
+        padding-left: 15px;
+        padding-right: 15px;
+        transition-duration: 0.4s;
+        color:rgb(44, 82, 68);
+        margin-top: 40px;
+    }
 }
