--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -20,7 +20,7 @@ body{
     background-color: aquamarine;
     height: 52px;
     border-bottom:rgb(145, 212, 205) solid 2px;
-    min-width: 1000px;
+    min-width: 600px;
     width: 100vw;
 }
 
@@ -28,7 +28,7 @@ body{
     margin: 30px;
     font-family: Dekko;
     text-align: center;
-    min-width: 1000px;
+    min-width: 600px;
 }
 
 button {
@@ -73,6 +73,7 @@ a:hover{
     margin-left: 30px;
     margin-right:30px;
     font-style:oblique;
+    transition-duration: 0.5s;
 }
 
 #welcome{
@@ -157,6 +158,10 @@ h2{
     height: 400px;
 }
 
+
+
+
+
 @media screen and (max-width:500px){
     body::-webkit-scrollbar {
         width: 0.7rem;
@@ -171,6 +176,9 @@ h2{
         background: rgb(21, 187, 146);
     }
     
+    *{
+        transition-duration: 0.4s;
+    }
     body{
         margin: 0;
         background-color: rgb(224, 247, 242);
@@ -181,43 +189,44 @@ h2{
     }
 
     #gitLogo{
-        width: 50px;
+        width: 40px;
         float: right;
-        margin-right: 20px;
-        padding-top:2px;
+        margin:10px;
+        position: fixed;
     }
     #name{
         color: cornsilk;
         font-size: x-large;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin-left:21%;
+        margin-left:30%;
         font-style:oblique;
         position: fixed;
     }
     
     #welcome{
         color: rgb(102, 146, 121);
-        font-size: 100px;
-        line-height: 80vh;
+        font-size: 500%;
         font-family: Indie Flower;
-        margin:auto;
+        margin:0;
     }
     #nav{
         background-color: aquamarine;
         height: 100px;
         border-bottom:rgb(145, 212, 205) solid 2px;
-        min-width: 500px;
-        width: 100vw;
-        padding-left: 20%;
+        min-width: 100vw;
+        max-width: 100vw;
+        padding-left: 10%;
         padding-top:10px;
         transition-duration: 0.4s;
     }
     
     #app{
-        margin: 30px;
         font-family: Dekko;
         text-align: center;
-        min-width: 400px;
+        min-width: 100vw;
+        max-width:100vw;
+        width: 100vw;
+        max-height: 300px;
 
     }
     
@@ -232,5 +241,7 @@ h2{
         transition-duration: 0.4s;
         color:rgb(44, 82, 68);
         margin-top: 40px;
+        margin-left: 5%;
+        position: relative;
     }
 }
