--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -114,7 +114,7 @@ h2{
 
 #aboutWrapper{
     display: grid;
-    
+
     /* height: 100vh; */
     grid-template-columns: 35% 10% 10px 5% 5% 5%;
     grid-template-rows: 100px 200px auto;
@@ -167,15 +167,15 @@ h2{
         width: 0.7rem;
         height: 0.7rem;
     }
-    
+
     body ::-webkit-scrollbar-track {
         background: rgb(46, 87, 90);
     }
-    
+
     body::-webkit-scrollbar-thumb {
         background: rgb(21, 187, 146);
     }
-    
+
     *{
         transition-duration: 0.4s;
     }
@@ -198,38 +198,39 @@ h2{
         color: cornsilk;
         font-size: x-large;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin-left:30%;
+        margin-left:33vw;
         font-style:oblique;
         position: fixed;
     }
-    
+
     #welcome{
         color: rgb(102, 146, 121);
         font-size: 500%;
         font-family: Indie Flower;
-        margin:0;
+        margin:auto;
     }
     #nav{
         background-color: aquamarine;
         height: 100px;
         border-bottom:rgb(145, 212, 205) solid 2px;
-        min-width: 100vw;
-        max-width: 100vw;
+        width:450px;
+        min-width: 450px;
+        max-width: 450px;
         padding-left: 10%;
         padding-top:10px;
         transition-duration: 0.4s;
     }
-    
+
     #app{
         font-family: Dekko;
         text-align: center;
-        min-width: 100vw;
-        max-width:100vw;
-        width: 100vw;
-        max-height: 300px;
+        min-width: 450px;
+        max-width:450px;
+        width: 450px;
+        max-height: 200px;
 
     }
-    
+
     button {
         background-color: aquamarine;
         border: none;
