--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -198,7 +198,7 @@ h2{
         color: cornsilk;
         font-size: x-large;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin-left:33vw;
+        margin-left:31vw;
         font-style:oblique;
         position: fixed;
     }
@@ -213,8 +213,8 @@ h2{
         background-color: aquamarine;
         height: 100px;
         border-bottom:rgb(145, 212, 205) solid 2px;
-        width:450px;
-        min-width: 450px;
+        width:100vw;
+        min-width: 350px;
         max-width: 450px;
         padding-left: 10%;
         padding-top:10px;
@@ -224,9 +224,9 @@ h2{
     #app{
         font-family: Dekko;
         text-align: center;
-        min-width: 450px;
+        min-width: 350px;
         max-width:450px;
-        width: 450px;
+        width: 100vw;
         max-height: 200px;
 
     }
