--- a/forApplication/style.css
+++ b/forApplication/style.css
@@ -197,14 +197,15 @@ h2{
         color: cornsilk;
         font-size: x-large;
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin-left: 20vw;
+        margin-left: 0;
         font-style:oblique;
         position: fixed;
+        padding-left: 18%;
     }
 
     #welcome{
         color: rgb(102, 146, 121);
-        font-size: 450%;
+        font-size: 400%;
         font-family: Indie Flower;
         margin:auto;
     }
